fix: set some box visible to none

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -50,6 +50,7 @@
 	position: absolute;
 	top: 1200px;
 	left: 600px;
+	display: none;
 }
 
 #ThinkingPng {
